--- a/JtProject/pom.xml
+++ b/JtProject/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.jtspringproject</groupId>
 	<artifactId>JtSpringProject</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JtSpringProject</name>
 	<description>Spring project for Java Technology</description>
